objects/Deployment_Status__c.object
<CustomObject>
    <fields>
        <fullName>Application_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Inventory</label>
        <referenceTo>Application_Inventory__c</referenceTo>
        <relationshipLabel>Deployment Status</relationshipLabel>
        <relationshipName>Deployment_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>DEMO</fullName>
                </value>
                <value>
                    <fullName>PROD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deployment Status</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Deployment  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>